# forgame-frontend

./: .env.example  .gitignore  Dockerfile  index.html  nginx.conf  tailwind.config.ts  vite.config.ts
.github/worflows/: trigger-deploy.yml
.github/workflows/: trigger-deploy.yml
backend/: .env.example  .gitignore  base_orchestrator.py  coroutine_orchestrator.py  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 09712a2af161_add_role_approval_requests.py  930149834383_add_player_profiles.py  b5d6f9c8e2a1_split_google_and_uploaded_profile_images.py  f88cb63f5a17_initial.py
backend/app/adapters/: base_http_adapter.py  fastapi_adapter.py
backend/app/auth/: dependencies.py  google_oauth.py  jwt_handler.py  rbac.py
backend/app/config/: project_settings.py
backend/app/database/: base_repository.py  connection.py
backend/app/models/: approval.py  player_profile.py  user.py
backend/app/repositories/: approval_repository.py  player_profile_repository.py  user_repository.py
backend/app/routers/: auth.py  health.py  sport_complex.py  users.py
backend/app/services/: api_service.py  base_service.py
backend/app/storage/: base.py  local.py
backend/app/utils/: app_logger.py
forgame-website/src/: site.css
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json
frontend/src/: App.tsx  i18n.tsx  index.css  main.tsx  session.tsx
public/: manifest.webmanifest
src/: App.tsx  i18n.tsx  index.css  session.tsx  tailwind.config.lov.json
src/components/: AppLayout.tsx  AuthShell.tsx  BackgroundUploadField.tsx  Bracket.tsx  (+17 more)
(+86 files in other folders)
