[tool.poetry]
name = "forgame-joga-junto-360"
version = "0.1.0"
description = ""
authors = ["Bruno Brito <britobrunodev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.136.1"
uvicorn = "^0.46.0"
python-dotenv = "^1.1.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0"}
asyncpg = "^0.30.0"
alembic = "^1.16.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
httpx = "^0.28.0"
pillow = "^12.2.0"
python-multipart = "^0.0.27"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
